apps/nginx-test/deployment-nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-deploy
  namespace: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx-test
        image: nginx
        ports:
        - name: web
          containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
