apps/nginx-test/service-nginx-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: nginx-test
  labels:
    app: nginx-test
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-test
