apps/nginx-test/nginx-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-deploy
  namespace: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx-test
        image: nginx
        ports:
        - name: web
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: nginx-test
  labels:
    app: nginx-test
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: nginx-test
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx-test.brilliantbase.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-svc 
            port:
              number: 80
  tls:
  - hosts:
    - nginx-test.brilliantbase.org
    secretName: nginx-test-tls-secret
